# nlls_gram

./: FAILED_IMPLICIT_AD_PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compile_implicit_ad.py  test_augmented_qr_benchmark.py  test_classic_geodesic_benchmark.py  test_gram_lm_benchmark.py  test_implicit_ad_benchmark.py  test_large_interpolation_benchmark.py  test_quasiseparable_benchmark.py  test_repeated_metric_benchmark.py  test_repeated_shifted_metric_benchmark.py  test_shifted_metric_benchmark.py  test_square_lm_benchmark.py
benchmarks/results/: 2026-07-21_failed-ad-baseline.json  2026-07-21_failed-ad-comparison.md  2026-07-21_failed-ad-compile-baseline.json  2026-07-21_failed-ad-compile-post-rerun.json  2026-07-21_failed-ad-compile-post.json  2026-07-21_failed-ad-compile-stable-baseline.json  2026-07-21_failed-ad-post-rerun-1.json  2026-07-21_failed-ad-post-rerun-2.json  2026-07-21_failed-ad-post.json  2026-07-21_failed-ad-stable-baseline.json  2026-07-21_failed-ad-stable-post-rerun.json  2026-07-21_failed-ad-stable-post.json
docs/: callbacks.md  gauss_newton.md  implicit_ad.md  index.md  llms.txt  metrics.md  multi_start.md  square_systems.md  tuning_guide.md  utilities.md
src/nlls_gram/: __init__.py  gram_lm.py  lsmr.py  metrics.py  preconditioners.py  quasiseparable.py  recycled_cg.py  square_lm.py
tests/: test_ad_solver_methods.py  test_augmented_qr.py  test_failed_implicit_ad.py  test_failure_ad_reference.py  test_float64_subprocess.py  test_gpu.py  test_gram_lm.py  test_implicit_geometry.py  test_jacobian_mode.py  test_lsmr.py  test_metric_factory.py  test_multi_start.py  test_nnx_gram_lm.py  test_normal_solvers.py  test_preconditioner_factory.py  test_recycled_cg.py  test_square_lm.py
