[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlls-gram"
version = "0.2.0"
description = "Gram/dual-form Levenberg-Marquardt nonlinear least-squares solvers for JAX"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Jesse Perla", email = "jesseperla@gmail.com" }]
keywords = [
    "levenberg-marquardt",
    "nonlinear-least-squares",
    "jax",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/HighDimensionalEconLab/nlls_gram"
Repository = "https://github.com/HighDimensionalEconLab/nlls_gram"
Documentation = "https://highdimensionaleconlab.github.io/nlls_gram/"
Issues = "https://github.com/HighDimensionalEconLab/nlls_gram/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nlls_gram"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.17",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
