[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlls-gram"
version = "1.8.0"
description = "Metric-aware underdetermined Levenberg-Marquardt least-squares for JAX"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Jesse Perla", email = "jesseperla@gmail.com" }]
keywords = [
    "levenberg-marquardt",
    "nonlinear-least-squares",
    "metric",
    "jax",
    "optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/HighDimensionalEconLab/nlls_gram"
Repository = "https://github.com/HighDimensionalEconLab/nlls_gram"
Documentation = "https://highdimensionaleconlab.github.io/nlls_gram/"
Issues = "https://github.com/HighDimensionalEconLab/nlls_gram/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nlls_gram"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
benchmark = [
    "pytest-benchmark>=5.2.3",
]
dev = [
    "flax>=0.12.7",
    "pytest>=8",
    "ruff>=0.15.17",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
gpu = [
    "jax[cuda13]>=0.7.0 ; sys_platform == 'linux'",
]
